WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109124
[BlackBerry] Reader Mode: Opening two links quickly from reader mode causes browser bad state
https://bugs.webkit.org/show_bug.cgi?id=109124
Summary
[BlackBerry] Reader Mode: Opening two links quickly from reader mode causes b...
Sean Wang
Reported
2013-02-06 18:35:00 PST
Description *********************** It is possible to put the browser into a broken state by rotating the device while following a link in Reader Mode. See attached images for examples of state in question. Steps to Reproduce *********************** 1. Load up the browser, navigate to a page with text links on it 2. Enter Reader Mode on the page 3. Tap a link, and immediately rotate the device (almost at the same time) Expected Results *********************** The browser should rotate and the page should load (not necessarily in that order) Actual Results *********************** Sometimes, the browser will enter a broken state If you click the links quickly, the browser can also be break to bad state since the creating window reentry.
Attachments
patch
(2.49 KB, patch)
2013-02-06 18:54 PST
,
Sean Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sean Wang
Comment 1
2013-02-06 18:54:01 PST
Created
attachment 186978
[details]
patch
Build Bot
Comment 2
2013-02-07 03:38:05 PST
Comment on
attachment 186978
[details]
patch
Attachment 186978
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/16445065
WebKit Review Bot
Comment 3
2013-02-07 07:09:58 PST
Comment on
attachment 186978
[details]
patch Clearing flags on attachment: 186978 Committed
r142117
: <
http://trac.webkit.org/changeset/142117
>
WebKit Review Bot
Comment 4
2013-02-07 07:10:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug