[BlackBerry] Reader Mode: Opening two links quickly from reader mode causes browser bad state https://bugs.webkit.org/show_bug.cgi?id=109124

Patch by Sean Wang <Xuewen.Wang@torchmobile.com.cn> on 2013-02-07
Reviewed by Yong Li.

RIM BUG 291246 Internally reviewed by YongLi.
Move the WebPageGroupLoadDeferrer object from ChromeClientBlackBerry::createWindow()
into WebPageClientImpl::createWindow() to make it more close to its protecting place.

* WebCoreSupport/ChromeClientBlackBerry.cpp:
(WebCore::ChromeClientBlackBerry::createWindow):

Canonical link: https://commits.webkit.org/127362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142117 268f45cc-cd09-0410-ab3c-d52691b4dbfc