Source/WebKit/blackberry/WebCoreSupport/ChromeClientBlackBerry.cpp
@@ -236,9 +236,6 @@ Page* ChromeClientBlackBerry::createWindow(Frame* frame, const FrameLoadRequest&
         return 0;
 #endif
 
-    PageGroupLoadDeferrer deferrer(m_webPagePrivate->m_page, true);
-    TimerBase::fireTimersInNestedEventLoop();
-
     int x = features.xSet ? features.x : 0;
     int y = features.ySet ? features.y : 0;
     int width = features.widthSet? features.width : -1;
